<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Sample Wear Mobile App</string>
<!--    <string name="title">Message Control</string>-->

<!--    <string name="click_me_text">Click the button to start/stop measurement</string>-->
<!--    <string name="clicked_text">Button clicked!</string>-->
<!--    <string name="success_message">Message successfully sent.<br />Check your Smartwatch! </string>-->
<!--    <string name="click_view_button">Click the Normal View text to toggle view</string>-->

<!--    <string name="click_me_button">Click Me</string>-->

<!--    <string name="message_content">This is the message</string>-->

<!--    <string name="title_wear">Wear App</string>-->
<!--    <string name="title_hrm">HRM</string>-->
<!--    <string name="status">Status :</string>-->
<!--    <string name="hr">HR :</string>-->
<!--    <string name="ibi">IBI :</string>-->
<!--    <string name="default_value">0</string>-->

<!--    <string name="message_on_button_click">App button clicked</string>-->

    <string name="status_default">No Status</string>
    <string name="status_connecting">Connecting</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_running">Running</string>
    <string name="status_stopped">Stopped</string>
    <string name="status_no_support">Not supported</string>

<!--    <string name="reset">Reset from Wear starting</string>-->
<!--    <string name="wear_running">Wear currently running</string>-->

<!--    <string name="button_start">Start</string>-->
<!--    <string name="button_stop">Stop</string>-->
<!--    <string name="timestamp">Timestamp</string>-->
<!--    <string name="button_normal_view">Normal View</string>-->
<!--    <string name="button_connect_hrm">Connect to HRM ></string>-->

<!--    <string name="connect_status_searching">Searching for devices…</string>-->
<!--    <string name="connect_status_stopped">Search timeout.</string>-->
<!--    <string name="connect_button_search">Search again</string>-->
<!--    <string name="devices_acquainted">Already Connected Devices:</string>-->
<!--    <string name="devices_found_new">Devices Found In Scan:</string>-->

    <string name="status_container_title">Status</string>
    <string name="ecg_plot_title">25 mm/s, 10 mm/mV</string>
    <string name="ppg_green_plot_title">PPG Green</string>
    <string name="ppg_ir_plot_title">PPG IR</string>
    <string name="ppg_red_plot_title">PPG Red</string>

    <string name="device_id_label">Device ID</string>

    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="info">Info</string>
    <string name="exception">Exception</string>

    <string name="pause_item">Pause</string>
    <string name="play_item">Play</string>
    <string name="stop_item">Stop</string>
    <string name="save_item">Save</string>
    <string name="save_data_item">Save Data</string>
    <string name="save_plot_item">Save Plot</string>
    <string name="save_both_item">Save Data &amp; Plot</string>
    <string name="save_all_item">Save All Data</string>
    <string name="save_ecg_data_item">Save ECG Data</string>
    <string name="save_ppg_green_data_item">Save PPG Green Data</string>
    <string name="save_ppg_ir_data_item">Save PPG IR Data</string>
    <string name="save_ppg_red_data_item">Save PPG Red Data</string>
    <string name="save_all_ppg_data_item">Save All PPG Data</string>
    <string name="save_device_data_item">Save Device HR Data</string>
    <string name="save_qrs_data_item">Save Calculated HR Data</string>
    <string name="choose_data_directory_item">Set Data Directory</string>
    <string name="info_item">Info</string>
    <string name="redo_setup_plots_item">Redo Plot Setup</string>
    <string name="restart_polar_api_item">Restart Polar API</string>
    <string name="device_id_item">Set Device ID</string>
    <string name="settings_item">Settings</string>
    <string name="help_item">Help</string>

    <string name="button_ppg_green">PPG Green</string>
    <string name="button_ppg_ir">PPG IR</string>
    <string name="button_ppg_red">PPG Red</string>

    <string name="ppg_green_status_title">PPG Green</string>
    <string name="ppg_ir_status_title">PPG IR</string>
    <string name="ppg_red_status_title">PPG Red</string>
    <string name="ecg_status_title">ECG</string>
    <string name="ppg_green_status">PPG Green\n%1$s</string>
    <string name="ppg_ir_status">PPG IR\n%1$s</string>
    <string name="ppg_red_status">PPG Red\n%1$s</string>
    <string name="ecg_status">ECG\n%1$s</string>
    <string name="status_ok">OK</string>
    <string name="status_bad">Bad</string>
    <string name="status_data_count_default">0</string>

    <string name="sectioning_container_title">Sections</string>
    <string name="section_name_dialog_title">Set Section Name</string>
    <string name="section_number_default">1</string>
    <string name="section_name_default">Section Name</string>
    <string name="section_start_time_default">Start Time</string>
    <string name="section_time_between">-</string>
    <string name="section_end_time_default">End Time</string>
    <string name="cannot_change_section_name">Recording in on.\nPlease try after recording is finished.</string>

    <!-- Plots -->
    <string name="label_hr">Heart Rate: </string>
    <string name="label_rr">R-R: </string>
    <string name="hr_title">HR and RR vs. Time</string>
    <string name="qrs_title">ECG vs. Time</string>
    <string name="hr_range_title">HR, bpm RR, ms/10</string>
    <string name="qrs_range_title">QRS Peak Detection</string>
    <string name="hr_domain_title_time">Time</string>
    <string name="hr_domain_title_sample">Sample</string>

    <string name="device_id_dialog_title">Set Device ID</string>
    <string name="note_dialog_title">Enter a Note</string>

    <string name="info_string">%1$s\nBattery level: %2$s\nFirmware: %3$s\nID: %4$s\n</string>
    <string name="elapsed_time">%1$.1f sec"</string>
    <string name="connecting">Connecting to Polar Sensor</string>
    <string name="connected_string">Connected to %1$s</string>
    <string name="ble_not_supported">Bluetooth LE is not supported.</string>
    <string name="no_device">Device not found.</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="device_id_title">Device ID</string>
    <string name="device_id_summary">Polar device ID or MAC address</string>
    <string name="patient_name_title">Patient Name</string>
    <string name="patient_name_summary">Patient name for ECG image file</string>
    <string name="ppg_green_visibility_title">PPG Green Plot Visibility</string>
    <string name="ppg_green_visibility_summary_on">PPG Green plot will be shown</string>
    <string name="ppg_green_visibility_summary_off">PPG Green plot will not be shown</string>
    <string name="ppg_ir_visibility_title">PPG IR Plot Visibility</string>
    <string name="ppg_ir_visibility_summary_on">PPG IR plot will be shown</string>
    <string name="ppg_ir_visibility_summary_off">PPG IR plot will not be shown</string>
    <string name="ppg_red_visibility_title">PPG Red Plot Visibility</string>
    <string name="ppg_red_visibility_summary_on">PPG Red plot will be shown</string>
    <string name="ppg_red_visibility_summary_off">PPG Red plot will not be shown</string>
    <string name="ecg_visibility_title">ECG Plot Visibility</string>
    <string name="ecg_visibility_summary_on">ECG plot will be shown</string>
    <string name="ecg_visibility_summary_off">ECG plot will not be shown</string>
    <string name="analysis_visibility_title">Analysis Visibility</string>
    <string name="analysis_visibility_summary_on">Analysis plots will be shown</string>
    <string name="analysis_visibility_summary_off">Analysis plots will not be shown</string>
</resources>