<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/settings_title">
        <EditTextPreference
            app:defaultValue=""
            app:key="deviceId"
            app:title="@string/device_id_title"
            app:dialogMessage="@string/device_id_summary"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:defaultValue=""
            app:key="patientName"
            app:title="@string/patient_name_title"
            app:dialogMessage="@string/patient_name_summary"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:key="analysisVisibility"
            app:summaryOn="@string/analysis_visibility_summary_on"
            app:summaryOff="@string/analysis_visibility_summary_off"
            app:title="@string/analysis_visibility_title" />
    </PreferenceCategory>

</PreferenceScreen>