<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingStart="24dp"
    android:paddingEnd="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingVertical="4dp"
        android:orientation="vertical"
        android:gravity="center_vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/section_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/section_number_default"
                android:textStyle="bold"
                android:layout_marginEnd="8dp"
                android:textSize="16sp"/>

            <TextView
                android:id="@+id/section_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/section_name_default"
                android:textStyle="bold"
                android:textSize="16sp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/section_start_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/section_start_time_default"
            android:textSize="14sp"/>
    </LinearLayout>
</RelativeLayout>