<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/status_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/plot_container"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="0.2">

        <TextView
            android:id="@+id/status_container_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/status_container_title"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="16sp"
            app:layout_constraintBottom_toTopOf="@id/status_ppg_ir"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/status_ppg_green"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ppg_green_status"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/status_ppg_ir"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status_container_title" />

        <TextView
            android:id="@+id/status_ppg_ir"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ppg_ir_status"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/status_ppg_red"
            app:layout_constraintStart_toEndOf="@id/status_ppg_green"
            app:layout_constraintTop_toBottomOf="@id/status_container_title" />

        <TextView
            android:id="@+id/status_ppg_red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ppg_red_status"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/status_ecg"
            app:layout_constraintStart_toEndOf="@id/status_ppg_ir"
            app:layout_constraintTop_toBottomOf="@id/status_container_title" />

        <TextView
            android:id="@+id/status_ecg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/ecg_status"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/status_ppg_red"
            app:layout_constraintTop_toBottomOf="@id/status_container_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/plot_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@id/status_container"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintVertical_weight="0.8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:isScrollContainer="true" >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ppg_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/ecg_container"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent">
<!--                app:layout_constraintVertical_chainStyle="spread"-->
<!--                app:layout_constraintVertical_weight="0.5">-->

                <com.androidplot.xy.XYPlot
                    android:id="@+id/ppg_green_plot"
                    style="@style/FullScreenGraph"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="10dp"

                    app:graphBackgroundColor="@color/white"
                    app:graphMarginBottom="10dp"
                    app:graphMarginLeft="10dp"
                    app:graphMarginRight="10dp"
                    app:graphMarginTop="10dp"
                    app:gridBackgroundColor="@color/white"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toTopOf="@id/ppg_ir_plot"
                    app:lineLabelInsetLeft="15dp"
                    app:renderMode="use_background_thread"
                    app:title="@string/ppg_green_plot_title"
                    app:titleTextColor="#000000"
                    app:titleTextSize="15dp" />

                <com.androidplot.xy.XYPlot
                    android:id="@+id/ppg_ir_plot"
                    style="@style/FullScreenGraph"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="10dp"

                    app:graphBackgroundColor="@color/white"
                    app:graphMarginBottom="10dp"
                    app:graphMarginLeft="10dp"
                    app:graphMarginRight="10dp"
                    app:graphMarginTop="10dp"
                    app:gridBackgroundColor="@color/white"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ppg_green_plot"
                    app:layout_constraintBottom_toTopOf="@id/ppg_red_plot"
                    app:lineLabelInsetLeft="15dp"
                    app:renderMode="use_background_thread"
                    app:title="@string/ppg_ir_plot_title"
                    app:titleTextColor="#000000"
                    app:titleTextSize="15dp" />

                <com.androidplot.xy.XYPlot
                    android:id="@+id/ppg_red_plot"
                    style="@style/FullScreenGraph"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="10dp"

                    app:graphBackgroundColor="@color/white"
                    app:graphMarginBottom="10dp"
                    app:graphMarginLeft="10dp"
                    app:graphMarginRight="10dp"
                    app:graphMarginTop="10dp"
                    app:gridBackgroundColor="@color/white"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/ppg_ir_plot"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:lineLabelInsetLeft="15dp"
                    app:renderMode="use_background_thread"
                    app:title="@string/ppg_red_plot_title"
                    app:titleTextColor="#000000"
                    app:titleTextSize="15dp" />

<!--                <Button-->
<!--                    android:id="@+id/button_ppg_green"-->
<!--                    android:layout_width="75dp"-->
<!--                    android:layout_height="75dp"-->
<!--                    android:background="@drawable/circle"-->
<!--                    android:hint="@string/button_ppg_green"-->
<!--                    android:textSize="12sp"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textStyle="bold"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toStartOf="@id/button_ppg_ir"-->
<!--                    app:layout_constraintStart_toStartOf="parent"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

<!--                <Button-->
<!--                    android:id="@+id/button_ppg_ir"-->
<!--                    android:layout_width="75dp"-->
<!--                    android:layout_height="75dp"-->
<!--                    android:background="@drawable/circle"-->
<!--                    android:hint="@string/button_ppg_ir"-->
<!--                    android:textSize="12sp"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textStyle="bold"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toStartOf="@id/button_ppg_red"-->
<!--                    app:layout_constraintStart_toEndOf="@id/button_ppg_green"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

<!--                <Button-->
<!--                    android:id="@+id/button_ppg_red"-->
<!--                    android:layout_width="75dp"-->
<!--                    android:layout_height="75dp"-->
<!--                    android:background="@drawable/circle"-->
<!--                    android:hint="@string/button_ppg_red"-->
<!--                    android:textSize="12sp"-->
<!--                    android:textColor="@color/white"-->
<!--                    android:textStyle="bold"-->
<!--                    app:layout_constraintBottom_toBottomOf="parent"-->
<!--                    app:layout_constraintEnd_toEndOf="parent"-->
<!--                    app:layout_constraintStart_toEndOf="@id/button_ppg_ir"-->
<!--                    app:layout_constraintTop_toTopOf="parent" />-->

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/ecg_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ppg_container">
<!--                app:layout_constraintVertical_chainStyle="spread"-->
<!--                app:layout_constraintVertical_weight="0.5">-->

                <com.androidplot.xy.XYPlot
                    android:id="@+id/ecg_plot"
                    style="@style/FullScreenGraph"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_marginTop="10dp"

                    app:graphBackgroundColor="@color/white"
                    app:graphMarginBottom="10dp"
                    app:graphMarginLeft="10dp"
                    app:graphMarginRight="10dp"
                    app:graphMarginTop="10dp"
                    app:gridBackgroundColor="@color/white"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="1.0"
                    app:lineLabelInsetLeft="15dp"
                    app:renderMode="use_background_thread"
                    app:title="@string/ecg_plot_title"
                    app:titleTextColor="#000000"
                    app:titleTextSize="15dp" />

                <TextView
                    android:id="@+id/ecg_hr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:textAlignment="center"
                    android:textColor="#C00000"
                    android:textSize="30sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ecg_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginRight="30dp"
                    android:layout_marginBottom="8dp"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="@id/ecg_hr"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/ecg_info"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginBottom="8dp"
                    android:textColor="#000000"
                    android:textSize="14sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/analysis_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/ecg_container"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:visibility="invisible">

                <com.androidplot.xy.XYPlot
                    android:id="@+id/qrs_plot"
                    style="@style/FullScreenGraph"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"

                    app:backgroundColor="#000000"
                    app:domainLineColor="#555555"
                    app:domainOriginLineColor="#555555"
                    app:domainTitleTextColor="#FFFFFF"
                    app:domainTitleTextSize="14dp"
                    app:graphBackgroundColor="#000000"

                    app:graphMarginBottom="20dp"
                    app:graphMarginLeft="30dp"
                    app:graphMarginRight="30dp"
                    app:graphMarginTop="20dp"
                    app:gridBackgroundColor="#000000"
                    app:layout_constraintBottom_toTopOf="@id/hr_plot"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:paddingLeft="5dp"
                    app:rangeLineColor="#555555"
                    app:rangeOriginLineColor="#555555"
                    app:rangeTitle="@string/qrs_range_title"
                    app:rangeTitleTextColor="#FFFFFF"
                    app:rangeTitleTextSize="14dp"
                    app:renderMode="use_background_thread"
                    app:title="@string/hr_title"
                    app:titleTextColor="#000000"
                    app:titleTextSize="15dp" />

                <com.androidplot.xy.XYPlot
                    android:id="@+id/hr_plot"
                    style="@style/FullScreenGraph"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    app:backgroundColor="#000000"
                    app:domainLineColor="#555555"
                    app:domainOriginLineColor="#555555"
                    app:domainTitle="@string/hr_domain_title_time"

                    app:domainTitleTextColor="#FFFFFF"
                    app:domainTitleTextSize="14dp"
                    app:graphBackgroundColor="#000000"
                    app:graphMarginBottom="20dp"
                    app:graphMarginLeft="30dp"
                    app:graphMarginRight="30dp"
                    app:graphMarginTop="20dp"
                    app:gridBackgroundColor="#000000"
                    app:gridInsetBottom="20dp"
                    app:gridInsetLeft="25dp"

                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/qrs_plot"
                    app:paddingBottom="5dp"
                    app:paddingLeft="5dp"
                    app:paddingRight="5dp"
                    app:paddingTop="5dp"
                    app:rangeLineColor="#555555"
                    app:rangeOriginLineColor="#555555"
                    app:rangeTitle="@string/hr_range_title"
                    app:rangeTitleTextColor="#FFFFFF"
                    app:rangeTitleTextSize="14dp"
                    app:renderMode="use_background_thread"
                    app:title="@string/hr_title"
                    app:titleTextColor="#000000"
                    app:titleTextSize="15dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>